Slowdown config in client and better suspense boundary on RecipeList
